[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Finale_Dropper.gd" type="Script" id=1]
[ext_resource path="res://materials/kenney_prototype_textures/orange/texture_10.png" type="Texture" id=2]
[ext_resource path="res://materials/box_material.tres" type="Material" id=3]

[sub_resource type="SpatialMaterial" id=86]
albedo_texture = ExtResource( 2 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1.9, 1.9, 1.9 )

[sub_resource type="BoxShape" id=87]
extents = Vector3( 0.9, 0.9, 0.9 )

[sub_resource type="BoxShape" id=88]
extents = Vector3( 2, 8, 10 )

[sub_resource type="BoxShape" id=89]

[sub_resource type="BoxShape" id=90]
extents = Vector3( 0.001, 6, 10 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 2, 1, 1 )

[node name="Dropper" type="Spatial"]
transform = Transform( 2.98023e-08, 0, -1, 0, 1, 0, 1, 0, 2.98023e-08, 0, -2, 23 )
script = ExtResource( 1 )

[node name="Tower" type="CSGCombiner" parent="."]
material_override = SubResource( 86 )
use_collision = true

[node name="CSGBox" type="CSGBox" parent="Tower"]
width = 3.0
height = 16.0
depth = 20.0

[node name="Sub" type="CSGBox" parent="Tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, -3 )
operation = 2
width = 4.0
depth = 10.0

[node name="Sub5" type="CSGBox" parent="Tower"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4, 3 )
operation = 2
width = 4.0
height = 2.34116
depth = 8.0

[node name="Sub6" type="CSGBox" parent="Tower"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2, -3 )
operation = 2
width = 4.0
height = 2.34116

[node name="Sub7" type="CSGBox" parent="Tower"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -2, -0.158305 )
operation = 2
width = 4.0
height = 2.34116
depth = 4.0

[node name="Sub2" type="CSGBox" parent="Tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0.856708 )
operation = 2
width = 4.0
height = 2.29154
depth = 10.0

[node name="Sub3" type="CSGBox" parent="Tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )
operation = 2
width = 4.0
depth = 10.0

[node name="Sub4" type="CSGBox" parent="Tower"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 4 )
operation = 2
width = 4.0
depth = 10.0

[node name="CSGBox2" type="CSGBox" parent="Tower"]
transform = Transform( 0.707107, -0.707107, -8.72889e-09, 0.707107, 0.707107, 2.10734e-08, -8.72889e-09, -2.10734e-08, 1, -0.666168, -4.56576, 8 )
operation = 2
width = 4.0

[node name="Dropper_Box" type="RigidBody" parent="." groups=["dynamic"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11, -6 )
continuous_cd = true
can_sleep = false
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true

[node name="MeshInstance" type="MeshInstance" parent="Dropper_Box"]
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Dropper_Box"]
shape = SubResource( 87 )

[node name="Gravity" type="Area" parent="."]
space_override = 3
gravity = 15.0

[node name="CollisionShape" type="CollisionShape" parent="Gravity"]
shape = SubResource( 88 )

[node name="Controllers" type="Spatial" parent="."]

[node name="Control_Up" type="Area" parent="Controllers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13, -8, -3.8743e-07 )

[node name="Button" type="CSGCombiner" parent="Controllers/Control_Up"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.355253, 0, -1.05874e-08 )

[node name="line" type="CSGBox" parent="Controllers/Control_Up/Button"]
width = 1.0
height = 0.1
depth = 0.3

[node name="triangle" type="CSGCylinder" parent="Controllers/Control_Up/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.746181, 0, 2.22379e-08 )
radius = 0.5
height = 0.1
sides = 3

[node name="CollisionShape" type="CollisionShape" parent="Controllers/Control_Up"]
shape = SubResource( 89 )

[node name="Control_Left" type="Area" parent="Controllers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, -8, -3 )

[node name="Button" type="CSGCombiner" parent="Controllers/Control_Left"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0170612, 0, 0.347022 )

[node name="line" type="CSGBox" parent="Controllers/Control_Left/Button"]
width = 1.0
height = 0.1
depth = 0.3

[node name="triangle" type="CSGCylinder" parent="Controllers/Control_Left/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.746181, 0, 2.22379e-08 )
radius = 0.5
height = 0.1
sides = 3

[node name="CollisionShape" type="CollisionShape" parent="Controllers/Control_Left"]
shape = SubResource( 89 )

[node name="Control_Right" type="Area" parent="Controllers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, -8, 3 )

[node name="Button" type="CSGCombiner" parent="Controllers/Control_Right"]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -0.0170617, 0, -0.376944 )

[node name="line" type="CSGBox" parent="Controllers/Control_Right/Button"]
width = 1.0
height = 0.1
depth = 0.3

[node name="triangle" type="CSGCylinder" parent="Controllers/Control_Right/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.746181, 0, 2.22379e-08 )
radius = 0.5
height = 0.1
sides = 3

[node name="CollisionShape" type="CollisionShape" parent="Controllers/Control_Right"]
shape = SubResource( 89 )

[node name="Control_Down" type="Area" parent="Controllers"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19, -8, -5.66244e-07 )

[node name="Button" type="CSGCombiner" parent="Controllers/Control_Down"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.345395, 0, 1.02936e-08 )

[node name="line" type="CSGBox" parent="Controllers/Control_Down/Button"]
width = 1.0
height = 0.1
depth = 0.3

[node name="triangle" type="CSGCylinder" parent="Controllers/Control_Down/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.746181, 0, 2.22379e-08 )
radius = 0.5
height = 0.1
sides = 3

[node name="CollisionShape" type="CollisionShape" parent="Controllers/Control_Down"]
shape = SubResource( 89 )

[node name="Invis_Walls" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Invis_Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.65574, 3, -4.93447e-08 )
shape = SubResource( 90 )

[node name="CollisionShape2" type="CollisionShape" parent="Invis_Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.58524, 3, 4.72439e-08 )
shape = SubResource( 90 )

[node name="Normalize" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -4, 8 )

[node name="CollisionShape" type="CollisionShape" parent="Normalize"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 8 )

[connection signal="body_entered" from="Controllers/Control_Up" to="." method="_on_Control_Up_body_entered"]
[connection signal="body_entered" from="Controllers/Control_Left" to="." method="_on_Control_Left_body_entered"]
[connection signal="body_entered" from="Controllers/Control_Right" to="." method="_on_Control_Right_body_entered"]
[connection signal="body_entered" from="Controllers/Control_Down" to="." method="_on_Control_Down_body_entered"]
[connection signal="body_entered" from="Normalize" to="." method="_on_Normalize_body_entered"]
